test/syntax-errors/dup-arg-names/dup-arg-names.foster
main = { foo 1 2 };

foo = { x:Int32 => x:Int32 => x };
